--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "greengenie",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
