--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.0.1",
         "react-router-dom": "^6.21.3",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
