--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,3 +1,3 @@
 PORT= #port no where server listen incoming requests
-dbURL= # MongoDB connection URL
+MONGO_URL= # MongoDB connection URL
 DEV_MODE= # development OR production
