--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,12 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.2",
         "express": "^4.18.2",
+        "mongodb": "^6.3.0",
         "mongoose": "^8.1.0",
         "morgan": "^1.10.0",
-        "nodemon": "^3.0.3"
+        "multer": "^1.4.5-lts.1",
+        "multer-gridfs-storage": "^5.0.2",
+        "nodemon": "^3.0.3",
+        "uuid": "^9.0.1"
     }
 }
