--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chatscope/chat-ui-kit-react": "^1.10.1",
+        "@chatscope/chat-ui-kit-styles": "^1.4.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.6.5",
         "firebase": "^10.7.2",
         "morgan": "^1.10.0",
+        "openai": "^4.26.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
