--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "frontend",
-    "proxy": "http://localhost:8080/api/v1/",
+    "proxy": "http://localhost:8080/api/v1",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
