--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "axios": "^1.6.5",
         "firebase": "^10.7.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "openai": "^4.26.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
