--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
         "mongodb": "^6.3.0",
         "mongoose": "^8.1.0",
         "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
+        "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
         "nodemon": "^3.0.3",
         "uuid": "^9.0.1"
